# protrader

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml
docs/superpowers/plans/: 2026-03-26-trading-bot.md
docs/superpowers/specs/: 2026-03-26-trading-bot-design.md
src/: auth.rs  backtest.rs  config.rs  historical.rs  lib.rs  logging.rs  main.rs  market_data.rs  order.rs  scheduler.rs  strategy.rs  telegram.rs
src/strategies/: ema_cross.rs  mod.rs  orb.rs  vwap_reversion.rs
tests/: integration_test.rs
