[package]
name = "protrader"
version = "0.1.0"
edition = "2021"

[lib]
name = "protrader"
path = "src/lib.rs"

[[bin]]
name = "protrader"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
anyhow = "1"
async-trait = "0.1"
